Fix image overflow

--- a/voic/static/main.css
+++ b/voic/static/main.css
@@ -8,6 +8,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #444655;
 }
 
+.document-images img {
+  max-width: 100%;
+  max-height: 500px;
+}
+
 .banner-bg {
   background-color: #444655;
 }
